# CuraEngine

./: CMakeLists.txt  conanfile.py
.github/workflows/: custom_build.yml
